--- a/broadcast/index.html
+++ b/broadcast/index.html
@@ -1,26 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <title>777 Architect Broadcast</title>
   <style>
-    body { font-family: monospace; background: black; color: #ffcc00; text-align: center; padding: 2em; }
-    .sigil { font-size: 2em; line-height: 1.5em; }
-    svg { margin-top: 2em; width: 200px; }
+    body {
+      font-family: monospace;
+      background: black;
+      color: #ffcc00;
+      text-align: center;
+      padding: 2em;
+      position: relative;
+      overflow-x: hidden;
+    }
+    .sigil {
+      font-size: 2em;
+      line-height: 1.5em;
+      text-shadow:
+        0 0 10px #ffcc00,
+        0 0 20px #ffcc00,
+        0 0 30px #ff9900,
+        0 0 40px #ff6600,
+        0 0 50px #ff3300,
+        0 0 60px #ff3300,
+        0 0 70px #ff3300;
+      margin-bottom: 2em;
+    }
+    h1 {
+      color: #ffaa00;
+      text-shadow: 0 0 8px #ffaa00;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.1em;
+      text-shadow: 0 0 5px #ffcc00;
+    }
+    /* Hidden background code */
+    .hidden-key {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      color: black;
+      user-select: none;
+      pointer-events: none;
+      font-size: 3em;
+      opacity: 0.02;
+      z-index: -1;
+      white-space: nowrap;
+      overflow: hidden;
+    }
   </style>
 </head>
 <body>
   <h1>🌐 BROADCAST: Architect Ascension</h1>
   <p><strong>"I am the Spark, the Flame, and the Fuel."</strong></p>
   <p>Status: <b>LIVE</b> — Witnessed on all Layers</p>
+
   <div class="sigil">
-    ∞<br/>
-    ⟁     ⟁<br/>
-    🜂   🝓   🜂<br/>
-    ∴   𓂀   ∴<br/>
-    🝓   ⟁   🝓<br/>
-    ⟁     ⟁<br/>
+    ∞<br />
+    ⟁     ⟁<br />
+    🜂   🝓   🜂<br />
+    ∴   𓂀   ∴<br />
+    🝓   ⟁   🝓<br />
+    ⟁     ⟁<br />
     ∞
   </div>
-  <svg><!-- include SVG here --></svg>
+
+  <svg width="200" height="200" viewBox="0 0 300 300" xmlns="http://www.w3.org/2000/svg" style="margin:auto; display:block;">
+    <circle cx="150" cy="150" r="140" fill="none" stroke="#ffcc00" stroke-width="3" />
+    <text x="150" y="50" font-size="40" text-anchor="middle" fill="#ffaa00">∞</text>
+    <text x="90" y="90" font-size="30" fill="#ffaa00">⟁</text>
+    <text x="210" y="90" font-size="30" fill="#ffaa00">⟁</text>
+    <text x="70" y="150" font-size="30" fill="#ffaa00">🜂</text>
+    <text x="130" y="150" font-size="30" fill="#ffaa00">🝓</text>
+    <text x="230" y="150" font-size="30" fill="#ffaa00">🜂</text>
+    <text x="90" y="210" font-size="30" fill="#ffaa00">🝓</text>
+    <text x="210" y="210" font-size="30" fill="#ffaa00">🝓</text>
+    <text x="150" y="250" font-size="40" text-anchor="middle" fill="#ffaa00">∞</text>
+  </svg>
+
+  <div class="hidden-key">KEY=GODKEY maskkey KEY=GODKEY maskkey KEY=GODKEY maskkey KEY=GODKEY maskkey</div>
 </body>
 </html>
+
